kubes/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-nginx
  labels:
    app: portal
    part: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal
      part: nginx
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: portal
        part: nginx
    spec:
      volumes:
        - name: static
          persistentVolumeClaim:
            claimName: portal-django-static
        - name: conf
          configMap:
            name: portal-nginx-conf
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/data/static/"
              name: static
            - mountPath: "/etc/nginx/nginx.conf"
              name: conf
              subPath: "nginx.conf"
---
apiVersion: v1
kind: Service
metadata:
  name: portal-nginx
  labels:
    app: portal
    part: nginx
spec:
  selector:
    app: portal
    part: nginx
  ports:
    - port: 80
      targetPort: 80
      name: nginx
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: portal-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
    - hosts:
        - portal.glauca.digital
      secretName: portal-tls
  rules:
  - host: portal.glauca.digital
    http:
      paths:
      - path: /
        backend:
          serviceName: portal-nginx
          servicePort: 80
