kubes/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-django
  labels:
    app: portal
    part: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal
      part: django
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: portal
        part: django
    spec:
      containers:
        - name: gunicorn
          image: as207960/portal:(version)
          imagePullPolicy: Always
          command: ["gunicorn", "-w", "8", "-b", "[::]:8000", "--forwarded-allow-ips", "*", "--access-logfile", "-", "--log-level=debug", "--timeout=90", "as207960_portal.wsgi:application"]
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: portal-django
  labels:
    app: portal
    part: django
spec:
  selector:
    app: portal
    part: django
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: portal-django
spec:
  podSelector:
    matchLabels:
      app: portal
      part: django
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal-ingress
  annotations:
    cert-manager.io/cluster-issuer: "gts"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - portal.glauca.digital
      secretName: portal-tls
  rules:
    - host: portal.glauca.digital
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portal-django
                port:
                  number: 8000
